Don enrique total real (total efectivo + BECA)

--- a/views/front_sales_report_pdf_template.xml
+++ b/views/front_sales_report_pdf_template.xml
@@ -202,6 +202,18 @@
 										</td>
 									</tr>
 								</table>
+                <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                                <table style="width:90%">
+                                  <tr>
+                                    <td style="width:50%;" class="text-left">
+                                      Total Real
+                                    </td>
+                                    <td style="width:50%; !important" class="text-right">
+                                      <span t-field="o.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(o.get_product_category_x_don_enrique_real())"/>
+                                    </td>
+                                  </tr>
+                                </table>
+                <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
                 <table style="width:90%">
                   <tr>
@@ -214,6 +226,7 @@
                   </tr>
                 </table>
 <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
 							</t>
 							<table style="width:90%;margin-top:15px;">
 								<t t-set="total" t-value="0"/>
