Add a third column to departament sales

--- a/views/front_sales_report_pdf_template.xml
+++ b/views/front_sales_report_pdf_template.xml
@@ -138,14 +138,15 @@
                                   <tr>
                                     <td style="width:50%;" class="text-left">
                                       Beca
-                                    </td>
+                                      <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                                  </td>
                                     <td style="width:50%; !important" class="text-right">
                                       <span t-field="o.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(o.get_product_category_x_don_enrique_real_get_beca())"/>
                                     </td>
                                   </tr>
-                          <!--                </table>-->
-                <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                <!--        <table style="width:90%"> -->
+                                      <!--                </table>-->
+                                    <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                                      <!--        <table style="width:90%"> -->
                                     <tr>
                                       <td style="width:50%;" class="text-left">
                                         Total General
@@ -154,11 +155,11 @@
                                         <span t-field="o.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(o.get_product_category_x_don_enrique())"/>
                                       </td>
                                     </tr>
-                  <!--                </table>-->
-                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                                      <!--                </table>-->
+                                        <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-                <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <!--        <table style="width:90%"> -->
+                                        <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                                        <!--        <table style="width:90%"> -->
                                   <tr>
                                     <td style="width:50%;" class="text-left">
                                       Total Real
@@ -167,13 +168,13 @@
                                       <span t-field="o.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(o.get_product_category_x_don_enrique_real())"/>
                                     </td>
                                   </tr>
-                          <!--                </table>-->
-                <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-				<!--				<tr>
-									<td class="text-left">
-										Sales
-									</td>
-									<td class="text-right">
+                                        <!--                </table>-->
+                                        <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+				                                    <!--				<tr>
+									                                   <td class="text-left">
+										                                           Sales
+									                                                    </td>
+									                                                             <td class="text-right">
 										<span t-field="o.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(o.get_total_sales_x())"/>
 									</td>
 								</tr> -->
@@ -228,6 +229,7 @@
 									</tr>
 								</t>
 							</table>
+              <!--TITO/////////////////////////////////////////////////////////////////////////////////////////////-->
 							<t t-if="o.get_product_category()">
 								<div align="center" style="margin-top:10px !important;">
 									============================<br/>
@@ -237,6 +239,9 @@
 									<tr t-foreach="o.get_product_category_x()" t-as="l">
 										<td class="text-left">
 											<span t-esc="o.get_product_name_x(l.get('pos_categ_id')) or 'Others'"/>
+										</td>
+                    <td class="text-right">
+											<span t-esc="'{0:.0f}'.format(l.get('qty'))"/>
 										</td>
 										<td class="text-right">
 											<span t-field="o.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(l.get('price'))"/>
@@ -252,6 +257,7 @@
 										</td>
 									</tr>
 								</table>
+                <!--TITO/////////////////////////////////////////////////////////////////////////////////////////////-->
 								<table style="width:90%">
 									<tr>
 										<td style="width:50%;" class="text-left">
@@ -263,7 +269,7 @@
 									</tr>
 								</table>
 
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
                 <table style="width:90%">
                   <tr>
                     <td style="width:50%;" class="text-left">
@@ -274,9 +280,9 @@
                     </td>
                   </tr>
                 </table>
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
                 <table style="width:90%">
                   <tr>
                     <td style="width:50%;" class="text-left">
@@ -287,9 +293,9 @@
                     </td>
                   </tr>
                 </table>
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
                 <table style="width:90%">
                   <tr>
                     <td style="width:50%;" class="text-left">
@@ -300,8 +306,8 @@
                     </td>
                   </tr>
                 </table>
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
                 <table style="width:90%">
                   <tr>
                     <td style="width:50%;" class="text-left">
@@ -312,7 +318,7 @@
                     </td>
                   </tr>
                 </table>
-<!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                  <!-- TITO ////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 							</t>
 							<table style="width:90%;margin-top:15px;">
 								<t t-set="total" t-value="0"/>
